# chess

./: CMakeLists.txt  CMakeLists.txt.user.169b641  GameLogic.cpp  GameLogic.h  Main.qml  QMLBridge.cpp  QMLBridge.h  QMLBridgeObserver.h  QmlBridge.cpp  QmlBridge.h  QmlBridgeObserver.h  game_logic.cpp  game_logic.h  hall_of_fame.cpp  hall_of_fame.h  main.cpp  main.qrc  movetimer.cpp  movetimer.h  qml_bridge.cpp  qml_bridge.h  qml_bridge_observer.h  record.cpp  record.h
